# thesis_archive

./: Untitled.ipynb  Untitled1.ipynb  c1modify_and_submit_.py  heatmap.ipynb
FEM code (archive)/crypt1_fischerKPP_epi_BOTH/: HiFlowFiles.cmake  crypt1_fischerKPP_epi_BOTH.cc  crypt1_fischerKPP_epi_BOTH.h  crypt1_fischerKPP_epi_BOTH.xml
FEM code (archive)/crypt2FischerKPP_epi_BOTH/: crypt2FischerKPP_epi_BOTH.cc  crypt2FischerKPP_epi_BOTH.h
FEM code (archive)/fischerKPP_GRAF_epi/: fischerKPP_GRAF_epi.cc  fischerKPP_GRAF_epi.xml
FEM code (archive)/fischerKPP_Parafields/: fischerKPP.cc
FEM code (archive)/fischerKPP_epi_BOTH/: HiFlowFiles.cmake  fischerKPP_epi_BOTH.cc  fischerKPP_epi_BOTH.xml
FEM code (archive)/fischerKPP_para_epi/: HiFlowFiles.cmake  fischerKPP_para_epi.h
FEM code (archive)/old/crypt2_fischerKPP_epi/: crypt2_fischerKPP_epi.cc
FEM code (archive)/old/crypt_1_fischerKPP_epi/: crypt_1_fischerKPP_epi.xml
FEM code (archive)/old/fischerKPP_epi/: fischerKPP_epi.h
FEM code (archive)/old/graf_fischerKPP/: HiFlowFiles.cmake  graf_fischerKPP.h
FEM code (archive)/xtensor/: xtensor
FEM_code_all/: CMakeLists.txt
FEM_code_all/crypt1_fischerKPP_epi_BOTH/: my_initial_condition.h
FEM_code_all/crypt2FischerKPP_epi_BOTH/: HiFlowFiles.cmake  crypt2FischerKPP_epi_BOTH.xml
FEM_code_all/data/: crypt0.inp  crypt1.inp  crypt2.inp  large_epi.vtu
FEM_code_all/fischerKPP_GRAF_epi/: HiFlowFiles.cmake  fischerKPP_GRAF_epi.h  my_initial_condition.h
FEM_code_all/fischerKPP_epi_BOTH/: fischerKPP_epi_BOTH.h  fischerKPP_para_epi.xml
FEM_code_all/fischerKPP_para_epi/: fischerKPP_para_epi.cc  my_initial_condition.h
FEM_code_all/old/crypt2_fischerKPP_epi/: HiFlowFiles.cmake  my_initial_condition.h
FEM_code_all/old/crypt_1_fischerKPP_epi/: HiFlowFiles.cmake  crypt_1_fischerKPP_epi.cc  my_initial_condition.h
FEM_code_all/old/fischerKPP/: HiFlowFiles.cmake
FEM_code_all/old/fischerKPP_epi/: HiFlowFiles.cmake  fischerKPP_epi.cc  my_initial_condition.h  my_initial_condition.h.old
FEM_code_all/old/fischerKPP_single/: fischerKPP.h  fischerKPP.xml
FEM_code_all/old/graf_fischerKPP/: graf_fischerKPP.cc
FEM_code_all/para_fischerKPP/: HiFlowFiles.cmake  para_fischerKPP.cc
RandomFieldPlots/first_figure/: boxplot.ipynb  crypt0.ipynb  cumulative_area_and_speed.ipynb  matnum_epi.ipynb
RandomFieldPlots/first_figure/.ipynb_checkpoints/: crypt0-checkpoint.ipynb
RandomFieldPlots/first_figure/crypt0/: COARSE_RF-crypt0_test2_mat2.npy  COARSE_RF-crypt0_test2_mat3.npy  COARSE_RF-crypt0_test2_overall.npy  PARA_RF-crypt0_test2_mat1.npy  PARA_RF-crypt0_test2_mat3.npy  PARA_RF-crypt0_test2_overall.npy  SMOOTH_RF-crypt0_test2_mat1.npy  SMOOTH_RF-crypt0_test2_mat2.npy  para_RF-crypt0_test2_mat2.npy  smooth_RF-crypt0_test2_overall.npy
RandomFieldPlots/first_figure/crypt1/: coarse_RF-crypt1_test1_overall.npy  old.replacedbyisotropicsmooth_RF-crypt1_test1_matoverall.npy  smooth_RF-crypt1_test1_mat1.npy  smooth_RF-crypt1_test1_mat2.npy  smooth_RF-crypt1_test1_mat3.npy  smooth_RF-crypt1_test1_overall.npy
RandomFieldPlots/first_figure/crypt2/: coarse_RF-crypt2_test6_mat1.npy  coarse_RF-crypt2_test6_mat2.npy  coarse_RF-crypt2_test6_mat3.npy  coarse_RF-crypt2_test6_overall.npy  para_RF-crypt2_test6_mat1.npy  para_RF-crypt2_test6_mat2.npy  para_RF-crypt2_test6_mat3.npy  para_RF-crypt2_test6_overall.npy
compare_inti_conds/: compare.ipynb
compare_inti_conds/gaussdist/: gaussdist_crypt1all.csv  gaussdist_crypt1mat3.csv
compare_inti_conds/heaviside/: heaviside_crypt0mat1.csv  heaviside_crypt1all.csv  heaviside_crypt1mat3.csv  heaviside_crypt2all.csv
crypt0/: crypt0_plot-Copy1.ipynb  crypt0_plot.ipynb  heaviside_crypt0all.csv
crypt0/.ipynb_checkpoints/: crypt0_plot-Copy1-checkpoint.ipynb
crypt0/mat1/: crypt0_test1_mat1.npy  crypt0_test2_mat1.npy  crypt0_test3_mat1.npy  crypt0_test4_mat1.npy
crypt0/mat2/: crypt0_test4_mat2.npy
crypt0/mat3/: crypt0_test0_mat3.npy  crypt0_test1_mat3.npy  crypt0_test3_mat3.npy
crypt0/overall/: crypt0_test0_overall.npy  crypt0_test2_overall.npy  crypt0_test4_overall.npy
crypt1test/: crypt1plot.ipynb  heaviside_crypt1mat1.csv  heaviside_crypt1mat2.csv
crypt1test/mat1/: crypt1_test1_mat1.npy  crypt1_test4_mat1.npy  crypt1_test5_mat1.npy
crypt1test/mat2/: crypt1_test0_mat2.npy  crypt1_test1_mat2.npy  crypt1_test2_mat2.npy  crypt1_test5_mat2.npy
crypt1test/mat3/: crypt1_test2_mat3.npy  crypt1_test3_mat3.npy  crypt1_test4_mat3.npy
crypt1test/overall/: crypt1_test0_overall.npy  crypt1_test2_overall.npy  crypt1_test5_overall.npy
crypt2/: crypt2plot.ipynb  heaviside_crypt2mat1.csv  heaviside_crypt2mat2.csv
crypt2/.ipynb_checkpoints/: crypt2plot-checkpoint.ipynb
crypt2/mat1/: crypt2_test0_mat1.npy  crypt2_test2_mat1.npy  crypt2_test4_mat1.npy  crypt2_test5_mat1.npy
crypt2/mat2/: crypt2_test0_mat2.npy  crypt2_test2_mat2.npy  crypt2_test4_mat2.npy  crypt2_test5_mat2.npy  crypt2_test6_mat2.npy
crypt2/mat3/: crypt2_test0_mat3.npy  crypt2_test1_mat3.npy  crypt2_test2_mat3.npy  crypt2_test4_mat3.npy  crypt2_test5_mat3.npy
crypt2/overall/: crypt2_test0_overall.npy
dealayed_reponse/: Untitled.ipynb  crypt1_c1_t1_roc_mean.npy  crypt2_c1_t1_roc_mean.npy
dealayed_reponse/crypt2/: expo2_test0_mat1.npy  expo4_test0_mat1.npy  expo6_test0_mat1.npy
gaussdist/crypt0/: gaussdist_crypt0_plot.ipynb  gaussdist_crypt0mat2.csv
gaussdist/crypt1/: crypt1_mat2_heaviside.csv
gaussdist/crypt2/: gaussdist_crypt2all.csv  gaussdist_crypt2plot.ipynb
last_plots/dealayed_reponse/: crypt2_c1_t1_mean.npy  crypt2_c1_t1_roc_mean.npy
last_plots/matern/: crypt1_c1_t1_roc_mean.npy
paraview_visualization/: README.md  plot_from_pvtu_array.py  plot_mat_num_npy_updated.py  plot_material_numbers.py
thesis_plots/: Untitled1.ipynb  Untitled2.ipynb  fkpp.ipynb  get_df_from_pvtus_automated.py  plot_material_numbers_coarse.py
thesis_plots/crypt0/: heaviside_crypt0mat2.csv  heaviside_crypt0mat3.csv
thesis_plots/crypt2/: crypt2plot.ipynb  heaviside_crypt2mat3.csv
thesis_plots/dealayed_reponse/: crypt2_c1_t1_mean.npy
(+374 files in other folders)
